tests/errors/test_08.xpp
// Variable not declared in this scope

fn main() void {
	let x = y;

	{
		let z = 2;
		let a = z;
	}
	let a = z;
}
